ref completo, falta testing manual